# Laglos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  generate-distorted-square-mesh.py  generate-tube-mesh.py  laghos.cpp  laglos.cpp  laglos_solver.cpp  laglos_solver.hpp  makefile
CMake/: FindLaglosCOINHSL.cmake  LAGLOSConfig.cmake.in  LaglosFindHIOP.cmake
Fortran/: CMakeLists.txt  Lagrangian_arbitrary_eos.f90  a.out  arbitrary_eos_lagrangian_lambda_module.mod  aribitrary_eos.f90  data  data_c
Fortran/Original/: Lagrangian_arbitrary_eos.f90
Fortran/eulerian-mws/: Makefile  data_c  eulerian_arbitrary_eos.f90  main.f90  output_ref_c
Fortran/lagrangian-mws/: Makefile  data  data_c  greedy_viscosity_Lagrangian_for_arbitrary_eos.f90  lagrangian_arbitrary_eos.f90  main.f90  output_ref  output_ref_c
Fortran/test/: CMakeLists.txt  example  test.cpp
Fortran/vdw/: Makefile  a.out  main_vdw.f90  vdw.f90
Release/: compile_commands.json
config/: defaults.cmake  var-config.h.in
data/: distorted-square.mesh  distorted-tube-1.mesh  distorted-tube-11.mesh  distorted-tube-2.mesh  distorted-tube-n1p7-1.mesh  distube-1600x1y.mesh  distube-200x1y.mesh  distube-3200x1y.mesh  distube-400x1y.mesh  distube-800x1y.mesh  full_ring.mesh  full_ring_r1.mesh  full_ring_r2.mesh  full_ring_r3.mesh  noh-10.mesh  noh-nonuniform.mesh  noh.mesh  radial-multizone.mesh  radial_Q1.mesh  radial_Q3.mesh  rectangle_saltzman.mesh  rectangle_saltzmann.mesh  ref-rectangle-q1q2.mesh  ref-segment-c0.mesh  ref-segment-extrapolated.mesh  ref-segment.mesh  ref-square-N15.mesh  ref-square-c0-N30.mesh  ref-square-c0.mesh  ref-square.mesh  ref-tube-c0.mesh  ring-quad1.mesh  segment-n1p7-1-extrapolated.mesh  segment-nhalf-1-extrapolated.mesh  segment-nhalf-1.mesh  shocktube.mesh  sodrad-sol-EP2D-Osher-00589.txt  square-vortex-small.mesh  square-vortex.mesh  square5c0_vortex.mesh  (+17 more)
data/elastic/: distube-100x1y.mesh  distube-1600x1y.mesh  distube-200x1y.mesh  distube-3200x1y.mesh  distube-400x1y.mesh  distube-800x1y.mesh  human_leg_impact.mesh  noh-nonuniform.mesh  projectile-impact-distorted.mesh  projectile-impact.mesh  projectile-plate-chamber.mesh  projectile-plate.mesh  ref-segment.mesh  ref-square-c0-p15.mesh  ref-square-c0.mesh  ref-square.mesh  square-vortex-mz.mesh  tube-100x1y.mesh  tube-12800x1y.mesh  tube-1600x1y.mesh  tube-1x100y.mesh  tube-1x12800y.mesh  tube-1x1600y.mesh  tube-1x200y.mesh  tube-1x25600y.mesh  tube-1x3200y.mesh  tube-1x400y.mesh  tube-1x6400y.mesh  tube-1x800y.mesh  tube-200x1y.mesh  tube-25600x1y.mesh  tube-2x100y.mesh  tube-2x1600y.mesh  tube-2x200y.mesh  tube-2x3200y.mesh  tube-2x400y.mesh  tube-2x800y.mesh  tube-3200x1y.mesh  (+3 more)
include/: CMakeLists.txt  compile_time_vals.h  compile_time_vals_template.h  elastic.hpp  eos.h  geometry.hpp  hiop_fr_template.options  initial_vals.hpp  laghos_initial_vals.hpp  laglos_assembly.hpp  laglos_solver.hpp  laglos_tools.hpp  lagrange_multiplier.hpp  lagrange_multiplier_dense.hpp  lambda_max_lagrange.h  limiter.h  problem_description.hpp  riemann1D.hpp  sedov_exact.hpp  shear_closure.hpp
problems/: elastic_human_leg_impact.h  elastic_impact.h  elastic_impact_shear.h  elastic_isentropic_vortex.h  elastic_noh.h  elastic_projectile_impact.h  elastic_projectile_plate.h  elastic_rotation.h  elastic_shear.h  elastic_shear_y.h  elastic_sheer.h  elastic_shocktube.h  elastic_test.h  elastic_twist.h  icf.h  isentropic_vortex.h  kidder.h  kidder_ball.h  lax.h  leblanc.h  noh.h  problem_base.h  problem_template.h  riemann_problem.h  saltzmann.h  sedov.h  sedovLLNL.h  smooth-1d.h  smooth-wave.h  sod-radial.h  sod.h  taylor_green.h  test_bcs.h  test_problems_include.h  triple_point.h  vdw-1.h  vdw-2.h  vdw-3.h  vdw-4.h  vdw-iv.h
results/: mesh-TestMM.000000
scripts/: compute_elastic_composite_error_and_convergence.py  compute_elastic_error_and_convergence.py  create_comparison_plot.py  create_convergence_sigma.py  create_convergence_table.py  create_convergence_table_sv.py  create_glvis_animation_script.py  create_refinement_plot.py  create_scatter_plot.py  create_sodrad_refinement_plot.py  eos.py  generate-distorted-saltzman-mesh.py  generate-distorted-square-mesh.py  generate-distorted-tube-1.mesh  generate-distorted-tube-1.py  generate-distorted-tube-2.py  generate-non-uniform-mesh.py  generate-saltzman-mesh.py  generate-saltzmann-mesh.py  generate-square-mesh.py  generate-triple-point-mesh.py  generate-triple-point-refined-interface-mesh.py  generate-tube-mesh.py  generate_ring_mesh.py  reorganize_paraview.py  run_all_comparative_mesh.sh  run_convergence_analysis.sh  run_convergence_plots.sh  run_convergence_test.sh  run_parallelization_analysis.sh  shape-function-plot.py  temp_whistler.sh  test_convergence_rates.sh  test_mesh_movement.py  whistler_convergence_script.sh
src/: CMakeLists.txt  geometry.cpp  laglos.cpp  laglos_assemble.cpp  laglos_assembly.cpp  laglos_solver.cpp  laglos_tools.cpp  sedov_exact.cpp  shear_closure.cpp
tests/: CMakeLists.txt  compare_ignore_last_lines.sh  test-square.mesh  test_1D.cpp  test_2D.cpp  test_CR.cpp  test_RT_vel.cpp  test_Raviart_vel.cpp  test_VDLFGI.cpp  test_cij_construction.cpp  test_elastic.cpp  test_elastic_human_leg.sh  test_elastic_impact.sh  test_elastic_pp_aortic.sh  test_elastic_rotation_MR.sh  test_elastic_shocktube.sh  test_eos.cpp  test_fortran.cpp  test_fortran_eulerian_mws.cpp  test_fortran_lagrangian_mws.cpp  test_fortran_module.cpp  test_iv.sh  test_kidder.sh  test_lag_functions.cpp  test_laglos_creation.cpp  test_lagrange_multipliers.cpp  test_limiter.cpp  test_mm.cpp  test_noh.sh  test_ot1_iv.sh  test_ot1_tg.sh  test_saltzman.sh  test_sedov.sh  test_smooth_1d.sh  test_sod_1d.sh  test_sod_1d_HO.sh  test_sod_2d.sh  test_tg.sh  test_vdw2.sh  test_vdw4.sh  (+1 more)
tests/output_ref/: HOsod1d.txt  elastic_human_leg.txt  elastic_impact.txt  elastic_impact_NH.txt  elastic_pp_aortic.txt  elastic_rotation_MR.txt  elastic_shocktube_NH.txt  iv.txt  kidder.txt  noh.txt  ot1_iv.txt  ot1_tg.txt  saltzman.txt  sedov.txt  smooth1d.txt  sod1d.txt  sod2d.txt  tg.txt  vdw2.txt  vdw4.txt
(+54 files in other folders)
